# SymphonyMac

./: AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/: agent-pipeline-architecture.md
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: contracts.ts
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  contracts.rs  dock.rs  github.rs  lib.rs  logs.rs  main.rs  notification.rs  orchestrator.rs  paths.rs  persistence.rs  report.rs  workspace.rs
src-tauri/src/agent/: pipeline.rs  process.rs  prompt.rs  runtime.rs
src-tauri/src/orchestrator/: reconciliation.rs  scan.rs  scheduler.rs
src/components/: ActiveAgents.tsx  Dashboard.tsx  IssueList.test.tsx  IssueList.tsx  LogViewer.tsx  PipelineReportView.tsx  RepoSelector.test.tsx  RepoSelector.tsx  Settings.tsx  dashboardModel.test.ts  dashboardModel.ts
src/contracts/: index.ts
src/features/active-agents/: ActiveAgentsView.tsx  AgentRunCard.tsx  types.ts  useActiveAgentsController.ts
src/features/dashboard/: DashboardBoard.test.tsx  DashboardBoard.tsx  DashboardMetricsBar.tsx  DashboardView.tsx  selectors.ts  types.ts  useDashboardController.ts
src/features/issues/: IssueListView.tsx  IssueRow.tsx  useIssueListController.ts
src/features/settings/: SettingsSections.tsx  SettingsView.tsx  constants.ts  (+2 more)
src/hooks/: useStatusPolling.ts  useTauriSubscription.ts
src/lib/: api.ts  formatters.ts  selectors.ts  types.ts
src/test/: setup.ts  tauri.ts
src/types/: orchestrator.ts
